--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Frontend CI/CD
 on:
   push:
     branches:
-      - main  # 监听 main 分支的 push 事件
+      - master  # 监听 main 分支的 push 事件
   pull_request:
     branches:
-      - main  # 监听向 main 分支的 PR 提交
+      - master  # 监听向 main 分支的 PR 提交
 
 jobs:
   build:
@@ -21,15 +21,15 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'  # 使用 Node.js 20 版本
+          node-version: '18'  # 使用 Node.js 20 版本
 
       # 安装依赖
       - name: Install dependencies
-        run: npm install  # 或 yarn install
+        run: pnpm install  # 或 yarn install
 
       # 运行构建命令
       - name: Build project
-        run: npm run build  # 对于 Vue 或 React 项目，通常是 npm run build
+        run: pnpm run build  # 对于 Vue 或 React 项目，通常是 pnpm run build
 
       # 部署到 GitHub Pages 或其他服务
       - name: Deploy to GitHub Pages
